# chip8rs

./: .gitignore  Cargo.toml  README.md  test.ch8
roms/: breakout.chasm  breakout_a.ch8  pong.chasm  pong2.chasm  pong_a.ch8  test.chasm  test2.ch8
src/: assembler.rs  bus.rs  chip8.rs  cli.yml  cpu.rs  disassembler.rs  display.rs  main.rs  ram.rs  sprites.rs  test.rs
src/assembler/: assembler-old.rs  instruction.rs  lexer.rs  mod.rs  parser.rs  token.rs
src/roms/: breakout.chasm  pong.chasm  pong2.ch8  rocket.chasm  spaceinvaders.chasm  test.ch8  test2.ch8
src/tests/: cpu_tests.rs
