[package]
name = "chiprs"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
minifb = "0.19.3"
rand = "0.8.4"
rodio = "0.14.0"
clap = {version = "2.33", features = ["yaml"]}
hex = "0.4.3"
sdl2 = "0.34.5"

[profile.release]
debug = true
